# dav-fuse-sync-control

./: .gitignore  Cargo.toml  POC.md  README.md  SETUP.md  davfs-sync-spec.md
.cargo/: config.toml
nautilus-extension/: README.md  davfs_sync_nautilus.py  install.sh
spec/: 01-overview.md  02-architecture.md  03-configuration.md  04-cli.md  05-integration.md  06-implementation-notes.md  README.md
src/: cache.rs  config.rs  filesystem.rs  main.rs  secrets.rs  webdav.rs
